// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`babel plugin core (bundle mode) autoworkletization workletizes useAnimatedStyle callback 1`] = `
"import { useAnimatedStyle } from "react-native-reanimated";
function Box() {
  const style = useAnimatedStyle(require("react-native-worklets/.worklets/1.js").default({}));
}"
`;

exports[`babel plugin core (bundle mode) autoworkletization workletizes useAnimatedStyle callback 2`] = `
"export default (function testJs1Factory({}) {
	const testJs1 = function() {
		"use no memo";
		return { width: 100 };
	};
	testJs1.__closure = {};
	testJs1.__workletHash = 1;
	testJs1.__pluginVersion = "x.y.z";
	return testJs1;
});
"
`;

exports[`babel plugin core (bundle mode) closure handling captures locally bound variables shadowing globals 1`] = `
"export default (function f_testJs1Factory({ console }) {
	const f = function() {
		"use no memo";
		console.log(console);
	};
	f.__closure = { console };
	f.__workletHash = 1;
	f.__pluginVersion = "x.y.z";
	return f;
});
"
`;

exports[`babel plugin core (bundle mode) closure handling captures multiple closure variables 1`] = `
"export default (function foo_testJs1Factory({ a, b }) {
	const foo = function() {
		"use no memo";
		return a + b;
	};
	foo.__closure = {
		a,
		b
	};
	foo.__workletHash = 1;
	foo.__pluginVersion = "x.y.z";
	return foo;
});
"
`;

exports[`babel plugin core (bundle mode) closure handling does not capture default globals 1`] = `
"export default (function f_testJs1Factory({}) {
	const f = function() {
		"use no memo";
		console.log("hi");
		return Math.random();
	};
	f.__closure = {};
	f.__workletHash = 1;
	f.__pluginVersion = "x.y.z";
	return f;
});
"
`;

exports[`babel plugin core (bundle mode) for react-compiler prevents outlining from worklet functions 1`] = `
"export default (function testJs1Factory({}) {
	const testJs1 = function() {
		"use no memo";
		return [
			1,
			2,
			3
		].map(() => null);
	};
	testJs1.__closure = {};
	testJs1.__workletHash = 1;
	testJs1.__pluginVersion = "x.y.z";
	return testJs1;
});
"
`;

exports[`babel plugin core (bundle mode) without worklets leaves code untouched and emits no factory 1`] = `
"function foo() {
  var x = 1;
}"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes ArrowFunctionExpression 1`] = `"const foo = require("react-native-worklets/.worklets/1.js").default({});"`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes ArrowFunctionExpression 2`] = `
"export default (function testJs1Factory({}) {
	const testJs1 = function(x) {
		"use no memo";
		return x + 2;
	};
	testJs1.__closure = {};
	testJs1.__workletHash = 1;
	testJs1.__pluginVersion = "x.y.z";
	return testJs1;
});
"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes FunctionDeclaration 1`] = `"const foo = require("react-native-worklets/.worklets/1.js").default({});"`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes FunctionDeclaration 2`] = `
"export default (function foo_testJs1Factory({}) {
	const foo = function(x) {
		"use no memo";
		return x + 2;
	};
	foo.__closure = {};
	foo.__workletHash = 1;
	foo.__pluginVersion = "x.y.z";
	return foo;
});
"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes ObjectMethod 1`] = `
"const foo = {
  bar: require("react-native-worklets/.worklets/1.js").default({})
};"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes ObjectMethod 2`] = `
"export default (function bar_testJs1Factory({}) {
	const bar = function(x) {
		"use no memo";
		return x + 2;
	};
	bar.__closure = {};
	bar.__workletHash = 1;
	bar.__pluginVersion = "x.y.z";
	return bar;
});
"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes named FunctionExpression 1`] = `"const foo = require("react-native-worklets/.worklets/1.js").default({});"`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes named FunctionExpression 2`] = `
"export default (function foo_testJs1Factory({}) {
	const foo = function(x) {
		"use no memo";
		return x + 2;
	};
	foo.__closure = {};
	foo.__workletHash = 1;
	foo.__pluginVersion = "x.y.z";
	return foo;
});
"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes unnamed FunctionExpression 1`] = `"const foo = require("react-native-worklets/.worklets/1.js").default({});"`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes unnamed FunctionExpression 2`] = `
"export default (function testJs1Factory({}) {
	const testJs1 = function(x) {
		"use no memo";
		return x + 2;
	};
	testJs1.__closure = {};
	testJs1.__workletHash = 1;
	testJs1.__pluginVersion = "x.y.z";
	return testJs1;
});
"
`;
